# olive-growing-conditions-explore

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  kythnos.yaml
notebooks/: 01_eda_corine.ipynb
research/: olive_growing_conditions.md
scripts/: download_sentinel.py
src/data/: climate.py  corine.py  dataset.py  sentinel.py  soil.py  terrain.py
src/features/: extractor.py
src/models/: segmentation.py
src/utils/: geo.py  metrics.py  visualization.py
tests/: test_dataset.py  test_features.py
