[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinel-crop-segmentation"
version = "0.1.0"
description = "Semantic segmentation of crop types from Sentinel-2 satellite imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torchgeo>=0.5",
    "segmentation-models-pytorch>=0.3",
    "pytorch-lightning>=2.2",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "hydra-core>=1.3",
    "mlflow>=2.11",
    "tqdm>=4.66",
    "rich>=13.0",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
